dnl configure.ac - Autoconf configuration for mudlark
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([mudlark],
        m4_esyscmd_s([cat version 2>/dev/null || echo "0.0.0-unknown"]),
        [thomasc1971@hotmail.com])
AC_CONFIG_SRCDIR([src/telnet.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AC_CANONICAL_HOST

dnl Detect target platform
case "$host_os" in
  mingw*|msys*) host_windows=yes ;;
  *)            host_windows=no ;;
esac
AM_CONDITIONAL([HOST_WINDOWS], [test "x$host_windows" = "xyes"])

AM_INIT_AUTOMAKE([1.14 foreign subdir-objects -Wall -Werror])
AM_SILENT_RULES([yes])

dnl Recompute the version at configure time so a rebuild after new commits
dnl picks up the current version without needing to re-run autoreconf. Falls
dnl back to PACKAGE_VERSION (set at autoreconf time via m4_esyscmd_s above)
dnl for tarball builds where build-aux/git-version.sh has nothing to read.
MUDLARK_VERSION=`"$srcdir/build-aux/git-version.sh" "$srcdir" 2>/dev/null`
AS_IF([test -z "$MUDLARK_VERSION"],
      [MUDLARK_VERSION="$PACKAGE_VERSION"])
AC_SUBST([MUDLARK_VERSION])
AC_MSG_NOTICE([mudlark version: $MUDLARK_VERSION])
dnl MUDLARK_VERSION is exposed to source via the compile-time-generated
dnl mudlark_version.h (see src/Makefile.am), not via config.h.

dnl Check for programs
user_cflags="$CFLAGS"
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR

dnl Build mode selection (--enable-release > --enable-debug > default ASan)
AC_ARG_ENABLE([debug],
  [AS_HELP_STRING([--enable-debug],
    [unsanitized debug build (-O0 -g3, no ASan)])],
  [enable_debug=$enableval],
  [enable_debug=no])

AC_ARG_ENABLE([release],
  [AS_HELP_STRING([--enable-release],
    [optimized release build (-O3 -DNDEBUG)])],
  [enable_release=$enableval],
  [enable_release=no])

if test "x$enable_release" = "xyes"; then
  CFLAGS="-O3 -DNDEBUG"
  AC_MSG_NOTICE([Release mode: CFLAGS set to -O3 -DNDEBUG])
elif test "x$enable_debug" = "xyes"; then
  CFLAGS="-O0 -g3"
  AC_MSG_NOTICE([Debug mode: CFLAGS set to -O0 -g3])
elif test "x$user_cflags" = "x"; then
  dnl ASan/UBSan is not available on Windows/MinGW. Fall back to
  dnl unsanitized debug when building natively on Windows (MinGW
  dnl does not ship libasan/libubsan).
  if test "x$host_windows" = "xyes"; then
    CFLAGS="-O1 -g3 -fno-omit-frame-pointer -fno-common"
    AC_MSG_NOTICE([Debug mode (no ASan on Windows): CFLAGS=$CFLAGS])
  else
    CFLAGS="-O1 -g3 -fno-omit-frame-pointer -fno-common -fsanitize=address,undefined -fno-sanitize-recover=undefined"
    LDFLAGS="-fsanitize=address,undefined $LDFLAGS"
    AC_MSG_NOTICE([ASan+UBSan mode (default): CFLAGS=$CFLAGS])
  fi
fi

dnl Check for pkg-config
PKG_PROG_PKG_CONFIG

dnl Check for ditty
PKG_CHECK_MODULES([DITTY], [ditty])

dnl Check for boba
PKG_CHECK_MODULES([BOBA], [boba])

dnl Platform-specific socket libraries
case "$host_os" in
    mingw*|msys*)
        SOCKET_LIBS="-lws2_32"
        ;;
    *)
        SOCKET_LIBS=""
        ;;
esac
AC_SUBST([SOCKET_LIBS])

dnl Check for header files
AC_CHECK_HEADERS([stdlib.h string.h unistd.h termios.h sys/ioctl.h sys/select.h arpa/inet.h netdb.h])

dnl Check for typedefs and structures
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

dnl Check for library functions
AC_CHECK_FUNCS([memset socket select getaddrinfo])

dnl Output files
AC_CONFIG_FILES([
    Makefile
    include/Makefile
    src/Makefile
    lisp/Makefile
    emacs/Makefile
    tests/Makefile
])

AC_OUTPUT
